# easy_crud_repo_service

./: .gitignore  Pipfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
easy_crud_repo_service/model/: car.py  order.py  player.py  team.py
easy_crud_repo_service/repo/: crud_repo.py
easy_crud_repo_service/repo/connections/: builders.py  get_connection_pool.py
tests/: .env
tests/test_repo/: conftest.py
tests/test_repo/test_connections/: .env  conftest.py  test_builders.py  test_get_connection_pool.py
tests/test_repo/test_crud_repo/: test_valid_cases.py
