[tool.poetry]
name = "easy-crud-repo-service"
version = "0.1.0"
description = ""
authors = ["Smolke <d.smolczynski1@gmail.com>"]
readme = "README.md"
packages = [{include = "easy_crud_repo_service"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
